fix scrollbar

--- a/site/src/index.css
+++ b/site/src/index.css
@@ -6,7 +6,10 @@
   box-sizing: border-box;
 
   font-family: ui-sans-serif,system-ui,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-  color: rgb(55, 65, 81)
+  color: rgb(55, 65, 81);
+
+  scrollbar-width: thin;
+  scrollbar-color: rgba(150, 133, 115, 0.5) rgba(150, 133, 115, 0.1);
 }
 
 html,
